--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nedb": "^1.8.10",
     "@types/node": "^14.0.26",
+    "adjectives": "^1.0.2",
     "discord.js": "^12.2.0",
+    "nedb": "^1.8.0",
+    "noun-json": "^1.0.1",
     "yargs": "^15.4.1"
   }
 }
